--- a/slides/design.html
+++ b/slides/design.html
@@ -160,12 +160,12 @@
     <ul fc>
       <li>Presentation should reflect the structure of the objects.</li>
       <li>
-        Presenter is a component responsible for transforming an entity object
-        to a UI component, by taking into account user preferences (like
+        PresentationManager is an entity responsible for transforming a given
+        entity to a UI component, by taking into account user preferences (like
         locale).
       </li>
       <li>
-        It's possible that many Presenter for an object are available, the
+        It's possible that many UI component for an object are available, the
         choice is left to the user.
       </li>
     </ul>
